[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "navi"
version = "0.1.0"
description = "Navi – Neuro-Adaptive Copilot for ADHD & Non-Linear Thinkers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Wildflower Bloom", email = "noreply@example.com"}
]
dependencies = [
  "gradio>=4.0,<5.0",
  "ollama>=0.2,<1.0",
  "sentence-transformers>=2.5,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "faiss-cpu>=1.7.4",
  "apscheduler>=3.10,<4.0",
  "pyyaml>=6.0,<7.0",
  "pydantic>=2.5,<3.0",
  "typing-extensions>=4.8,<5.0",
  "pygame>=2.5,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<8.0",
  "pytest-asyncio>=0.21,<0.22",
  "ruff>=0.1.5,<0.3.0",
  "mypy>=1.6,<2.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.10"
packages = ["navi"]
strict = false

[tool.ruff]
target-version = "py310"
line-length = 100

